# distributed_hypercollab_platform

./: .env.example  .gitignore  README.md  docker-compose.yml  setupbackend.md  setupfrontend.md
backend/: Dockerfile  dump.rdb  package-lock.json  package.json  server.js
backend/src/config/: kafka.js  redis.js
backend/src/constants/: permissions.js
backend/src/controllers/: analyticsController.js  authController.js  boardsController.js  chatController.js  listsController.js  tasksController.js  workspacesController.js
backend/src/middleware/: auth.js  auth.jsx  rbac.js
backend/src/models/: Board.js  Chat.js  Message.js  Tasks.js  User.js  User.jsx  workSpace.js
backend/src/routes/: analytics.js  auth.js  auth.jsx  boards.js  chat.js  lists.js  tasks.js  workspaces.js
backend/src/utils/: eventEmitter.js  sendEmail.js  tokenGenerator.js  wsBroadcast.js
backend/src/websocket/: socketServer.js
cpp_services/: CMakeLists.txt
cpp_services/analytics_engine/: CMakeLists.txt  Dockerfile  README.md
cpp_services/analytics_engine/src/: main.cpp
cpp_services/src/: main.cpp
docs/: feature_docs.md  mvp.md  work_divison_temp.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: liboqs.js  liboqs.wasm
frontend/src/: App.jsx  globals.css  index.css  main.jsx
frontend/src/context/: WebSocketProvider.jsx
frontend/src/crypto/: crypto.js  keyStore.js
frontend/src/hooks/: useWebSocket.js
frontend/src/lib/: axios.js
frontend/src/router/: AppRouter.jsx  (+1 more)
nginx/: nginx.conf
(+39 files in other folders)
